# mnn_anal

./: .gitignore
eoa_bench_docs/02-初测阶段/结果分析/: pyproject.toml
eoa_bench_docs/03-详测阶段/结果分析/: README.md  pyproject.toml
mnn_llm_benchmark/: CLAUDE.md  README.md  batchx.sh  batchxx.sh  bench.sh  catresults.sh  mnn_llm_126t.yaml  mnn_llm_1t.yaml  mnn_llm_2t.yaml  mnn_llm_6t.yaml  mnn_llm_pn_sweep_step-p16-n8-t6.yaml  mnn_llm_pn_sweep_step-p64-n32.yaml  mnn_llm_pn_sweep_step-p64-n32_dyo78.yaml  mnn_llm_pn_sweep_step-p64-n32_mmp01.yaml  mnn_llm_rep_sweep_t1.yaml  mnn_llm_t1_c2_kvfalse_mmp0_dyo0_pn_vp_pf.yaml  mnn_llm_t1_c2_kvfalse_mmp0_dyo0_pn_vp_pf_2.yaml  mnn_llm_t1_c2_pn_sweep.yaml  mnn_llm_tg64-192_pp192.yaml  my_test.yaml  obo_test.yaml  obop_test.yaml  obop_test_bak.yaml  pyproject.toml  pytest.ini  set_env.sh  xxxx.yaml
mnn_llm_benchmark/config/: README.md  models.toml  system.example.toml  system.toml
mnn_llm_benchmark/data/: benchmark_results_bak.db  benchmark_results_bbaakk.db
mnn_llm_benchmark/databak-256-20251120_tasks/temp/: hunyuan_05b_1763427439_raw.txt  hunyuan_05b_1763427491_raw.txt  hunyuan_05b_1763427534_raw.txt  hunyuan_05b_1763427557_raw.txt  hunyuan_05b_1763427578_raw.txt  hunyuan_05b_1763427597_raw.txt  (+330 more)
mnn_llm_benchmark/docs/: report.md
mnn_llm_benchmark/framework/: README.md  benchmark.py
mnn_llm_benchmark/logs/: .gitkeep  benchmark.log.2025-11-20  benchmark.log.2025-11-24  benchmark.log.2025-11-25  benchmark.log.2025-11-26  benchmark.log.2025-11-27  benchmark.log.2025-11-28  benchmark.log.2025-12-01
mnn_llm_benchmark/prompts/: README.md  code_js.txt  conversation.txt  en_long.txt  en_medium.txt  en_short.txt  es_medium.txt  list_items.txt  vl_standard.txt  zh_medium.txt  zh_short.txt
mnn_llm_benchmark/results/: .gitkeep
mnn_llm_benchmark/tasks/: README.md
mnn_llm_benchmark/temp/: hunyuan_05b_1764217260_raw.txt  hunyuan_05b_1764217352_raw.txt  hunyuan_05b_1764217447_raw.txt  hunyuan_05b_1764217723_raw.txt  hunyuan_05b_1764217906_raw.txt  hunyuan_05b_1764218272_raw.txt  hunyuan_05b_1764243836_raw.txt  hunyuan_05b_1764243874_raw.txt  hunyuan_05b_1764244004_raw.txt  hunyuan_05b_1764244072_raw.txt  hunyuan_05b_1764244139_raw.txt  hunyuan_05b_1764244230_raw.txt  hunyuan_05b_1764244255_raw.txt  hunyuan_05b_1764244281_raw.txt  hunyuan_05b_1764244302_raw.txt  hunyuan_05b_1764244324_raw.txt  hunyuan_05b_1764244348_raw.txt  hunyuan_05b_1764244400_raw.txt  hunyuan_05b_1764244422_raw.txt  hunyuan_05b_1764244445_raw.txt  hunyuan_05b_1764244546_raw.txt  hunyuan_05b_1764244595_raw.txt  hunyuan_05b_1764244724_raw.txt  hunyuan_05b_1764244752_raw.txt  hunyuan_05b_1764244781_raw.txt  hunyuan_05b_1764244805_raw.txt  hunyuan_05b_1764244885_raw.txt  hunyuan_05b_1764244940_raw.txt  hunyuan_05b_1764245053_raw.txt  hunyuan_05b_1764245111_raw.txt  hunyuan_05b_1764245158_raw.txt  hunyuan_05b_1764245197_raw.txt  hunyuan_05b_1764245268_raw.txt  hunyuan_05b_1764245308_raw.txt  hunyuan_05b_1764245331_raw.txt  hunyuan_05b_1764245381_raw.txt  hunyuan_05b_1764245497_raw.txt  hunyuan_05b_1764245540_raw.txt  hunyuan_05b_1764245616_raw.txt  hunyuan_05b_1764245686_raw.txt  (+686 more)
mnn_llm_benchmark/web_server/: app.py
(+6105 files in other folders)
