[project]
name = "eao-initial-results-2-analysis"
version = "1.0.0"
description = "EAO初测结果2参数分析工具"
authors = [
    {name = "EAO Project Team", email = "eao@project.local"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.67.1",
    "imageio>=2.35.1",
    "statsmodels>=0.14.1",
]
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
include = [
    "analyze_mmap.py",
    "analyze_dynamicoption.py"
]

[project.scripts]
analyze-mmap = "analyze_mmap:MmapAnalyzer.run_analysis"
analyze-dynamicoption = "analyze_dynamicoption:DynamicOptionAnalyzer.run_analysis"
