[project]
name = "eao-detailed-results-analysis"
version = "1.0.0"
description = "EAO详测阶段结果分析工具"
authors = [
    {name = "EAO Project Team", email = "eao@project.local"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.67.1",
    "imageio>=2.35.1",
    "statsmodels>=0.14.1",
]
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
include = [
    "scripts/*.py"
]

[project.scripts]
# 可以根据需要添加具体的脚本入口